// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code-card header row labels a fence that declares its language 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#ececec",
        "borderRadius": 8,
        "marginVertical": 6,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "paddingBottom": 2,
          "paddingLeft": 12,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <Text
        className="text-sm text-white "
        numberOfLines={1}
        style={
          [
            {
              "color": "rgba(17, 17, 17, 0.48)",
              "flexShrink": 1,
              "fontSize": 11,
              "fontWeight": "500",
            },
            {
              "lineHeight": 14,
            },
          ]
        }
      >
        python
      </Text>
      <View
        accessibilityLabel="Copy code"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(17, 17, 17, 0.08)",
            "borderRadius": 4,
            "padding": 4,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={14}
          bbWidth={14}
          fill="none"
          focusable={false}
          height={14}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="rgba(17, 17, 17, 0.48)"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 14,
                "width": 14,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={14}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 2047938833,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGRect
              fill={null}
              height="14"
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              rx="2"
              ry="2"
              stroke={
                {
                  "payload": 2047938833,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              width="14"
              x="8"
              y="8"
            />
            <RNSVGPath
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 2047938833,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <RCTScrollView
      horizontal={true}
      scrollEventThrottle={16}
      showsHorizontalScrollIndicator={true}
      style={
        {
          "paddingBottom": 10,
          "paddingHorizontal": 12,
          "paddingTop": 2,
        }
      }
    >
      <View>
        <Text
          className="text-sm text-white "
          selectable={true}
          style={
            {
              "color": "#111111",
              "fontFamily": "Menlo",
              "fontSize": 13,
              "lineHeight": 19,
            }
          }
        >
          print(
          <Text
            className="text-sm text-white "
            style={
              {
                "color": "rgb(16, 121, 95)",
              }
            }
          >
            "hi"
          </Text>
          )
        </Text>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`code-card header row labels an unlabelled fence "Plain text" 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#ececec",
        "borderRadius": 8,
        "marginVertical": 6,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
          "paddingBottom": 2,
          "paddingLeft": 12,
          "paddingRight": 8,
          "paddingTop": 8,
        }
      }
    >
      <Text
        className="text-sm text-white "
        numberOfLines={1}
        style={
          [
            {
              "color": "rgba(17, 17, 17, 0.48)",
              "flexShrink": 1,
              "fontSize": 11,
              "fontWeight": "500",
            },
            {
              "lineHeight": 14,
            },
          ]
        }
      >
        Plain text
      </Text>
      <View
        accessibilityLabel="Copy code"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "rgba(17, 17, 17, 0.08)",
            "borderRadius": 4,
            "padding": 4,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={14}
          bbWidth={14}
          fill="none"
          focusable={false}
          height={14}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="rgba(17, 17, 17, 0.48)"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 14,
                "width": 14,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={14}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 2047938833,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGRect
              fill={null}
              height="14"
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              rx="2"
              ry="2"
              stroke={
                {
                  "payload": 2047938833,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              width="14"
              x="8"
              y="8"
            />
            <RNSVGPath
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 2047938833,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <RCTScrollView
      horizontal={true}
      scrollEventThrottle={16}
      showsHorizontalScrollIndicator={true}
      style={
        {
          "paddingBottom": 10,
          "paddingHorizontal": 12,
          "paddingTop": 2,
        }
      }
    >
      <View>
        <Text
          className="text-sm text-white "
          selectable={true}
          style={
            {
              "color": "#111111",
              "fontFamily": "Menlo",
              "fontSize": 13,
              "lineHeight": 19,
            }
          }
        >
          plain block content
        </Text>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
